--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_BASE_URL = http://localhost:4000
+# REACT_APP_BASE_URL = http://localhost:4000
+REACT_APP_BASE_URL = https://cv-generator-app.onrender.com/
